force-app/main/default/objects/Charge__c/Charge__c.object-meta.xml
<CustomObject>
    <description>Representations an allocation of all or part of a grant to a fund (funding source)</description>
    <label>Charge</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>