force-app/main/default/objects/Charge__c/fields/Amount_charged__c.field-meta.xml
<CustomField>
    <fullName>Amount_charged__c</fullName>
    <description>The amount of the linked grant that is being charged to the linked fund</description>
    <inlineHelpText>The amount of the linked grant that is being charged to the linked fund</inlineHelpText>
    <label>Amount charged</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>