force-app/main/default/objects/Charge__c/fields/Canceled__c.field-meta.xml
<CustomField>
    <fullName>Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked then the proposal to which this charge is linked has been declined or request/award withdrawn - this field is auto-maintained.</description>
    <inlineHelpText>If checked then the proposal to which this charge is linked has been declined or request/award withdrawn - this field is auto-maintained.</inlineHelpText>
    <label>Canceled</label>
    <type>Checkbox</type>
</CustomField>