force-app/main/default/objects/Charge__c/fields/Date_released__c.field-meta.xml
<CustomField>
    <fullName>Date_released__c</fullName>
    <description>The date on which Finance released this charge against the funds in its fund</description>
    <inlineHelpText>The date on which Finance released this charge against the funds in its fund</inlineHelpText>
    <label>Date released</label>
    <type>Date</type>
</CustomField>