force-app/main/default/objects/Charge__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The distribution within the charge&apos;s fund against which this charge is released</description>
    <inlineHelpText>The distribution within the charge&apos;s fund against which this charge is released</inlineHelpText>
    <label>Distribution</label>
    <referenceTo>Distribution__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>