force-app/main/default/objects/Charge__c/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <description>The fund to which this charge applies</description>
    <inlineHelpText>The fund to which this charge applies</inlineHelpText>
    <label>Fund</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>May only charge to active funds.</errorMessage>
        <filterItems>
            <field>Fund__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>May only charge to active funds.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Fund__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>