force-app/main/default/objects/Charge__c/fields/Projection__c.field-meta.xml
<CustomField>
    <fullName>Projection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The projection within the charge&apos;s fund against which this charge is released</description>
    <inlineHelpText>The projection within the charge&apos;s fund against which this charge is released</inlineHelpText>
    <label>Projection</label>
    <referenceTo>Projection__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <type>Lookup</type>
</CustomField>