force-app/main/default/objects/Charge__c/fields/Status_numeric__c.field-meta.xml
<CustomField>
    <fullName>Status_numeric__c</fullName>
    <description>The numeric status of the linked proposal</description>
    <formula>Proposal__r.Status_numeric__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The numeric status of the linked proposal</inlineHelpText>
    <label>Status numeric</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>