force-app/main/default/objects/Charge__c/validationRules/Fund_must_have_amount_funded.validationRule-meta.xml
<ValidationRule>
    <fullName>Fund_must_have_amount_funded</fullName>
    <active>true</active>
    <description>The fund must have an amount funded in order to have charges.</description>
    <errorConditionFormula>OR(
 ISBLANK(Fund__r.Amount_funded__c ),
 Fund__r.Amount_funded__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>The fund must have non-zero amount funded in order to have charges.</errorMessage>
</ValidationRule>