force-app/main/default/objects/Charge__c/validationRules/OnlyOneOfProjectionAndDistribution.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyOneOfProjectionAndDistribution</fullName>
    <active>true</active>
    <description>At most one of the Projection and Distribution lookup fields may be entered.</description>
    <errorConditionFormula>AND(
 NOT(ISBLANK(Projection__c)),
 NOT(ISBLANK(Distribution__c))
)</errorConditionFormula>
    <errorMessage>At most one of the Projection and Distribution lookup fields may be entered.</errorMessage>
</ValidationRule>