force-app/main/default/objects/Charge__c/validationRules/ProjectionDistributionNotInFund.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectionDistributionNotInFund</fullName>
    <active>true</active>
    <description>The linked projection or distribution must belong to the same fund as the charge.</description>
    <errorConditionFormula>OR(
 AND(
  NOT(ISBLANK(Projection__c)),
  Projection__r.Fund__c &lt;&gt; Fund__c
 ), 
 AND(
  NOT(ISBLANK(Distribution__c)),
  Distribution__r.Target_fund__c &lt;&gt; Fund__c
 )
)</errorConditionFormula>
    <errorMessage>The linked projection or distribution must belong to the same fund as the charge.</errorMessage>
</ValidationRule>