force-app/main/default/objects/Charge__c/validationRules/StandardFundsOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>StandardFundsOnly</fullName>
    <active>true</active>
    <description>Charges may only be linked to standard funds.</description>
    <errorConditionFormula>Fund__r.RecordType.DeveloperName != &quot;Standard&quot;</errorConditionFormula>
    <errorDisplayField>Fund__c</errorDisplayField>
    <errorMessage>Charges may only be linked to standard funds.</errorMessage>
</ValidationRule>